@@ -12,6 +12,7 @@
 - Added event storm detection
 - Added possibility to specify multiple SNMP community strings for discovery
   and configuration polls
+- NetXMS server now can understand interface aliases (description in Cisco terms)
 - Fixed issues: #189, #190, #199
 
 
